css added media query

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    
-    <div class="add-items container">
+    <div class="add-items ">
         <h1>Grocery Items</h1>
         <div class="item_submit">
             <input type="text" id="input-box" onkeydown = "if(window.event.keyCode == 13)  createItem() " placeholder="Add your item here">
